--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -1078,6 +1078,8 @@
 		@include nsm {
 			display: block;
 			margin-bottom: 2rem;
+			position: relative;
+			z-index: 3;
 		}
 	}
 	&__info-title {
