--- a/#src/scss/_nullstyles.scss
+++ b/#src/scss/_nullstyles.scss
@@ -409,6 +409,16 @@ p {
 		height: 50px;
 	}
 }
+
+.img-sm{
+	 display: none; 
+    @include nsm{
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+	
+}
 //====================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
